# object_detection

./: README.md
object_detection/: CMakeLists.txt  package.xml
object_detection/include/: object_detection.h  ocv_common.hpp
object_detection/msg/: BoxMax.msg  Centroid.msg  Deviation.msg
object_detection/nets/: person-detection-retail-0013.xml
object_detection/src/: object_detection_node.cpp
